--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,54 +1,3 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/easybookdb
-    username: root
-    password:
-#    driver-class-name: com.mysql.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQLDialect
-
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: amoz4christ@gmail.com
-    password: Lovejesus1!
-    protocol: smtp
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-            required: true
-#  mail:
-#    host: localhost
-#    port: 1025
-#    username: hello
-#    password: hello
-#
-#    properties:
-#      mail:
-#        smtp:
-#          ssl:
-#            trust: "*"
-#          auth: true
-#          starttls:
-#            enable: true
-#          connectiontimeout: 5000
-#          timeout: 3000
-#          writetimeout: 5000
-
-app:
-  email: amoz4christ@gmail.com
-
-springdoc:
-  swagger-ui:
-    path=/swagger-ui:
-      html: /api/v1/auth/swagger
+  profiles:
+    active: dev
