--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,19 +1,30 @@
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/easybookdb
+#    username: root
+#    password:
+##    driver-class-name: com.mysql.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    database: mysql
+#    database-platform: org.hibernate.dialect.MySQLDialect
+
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/easybookdb
-    username: root
-    password:
-#    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:postgresql://dpg-chim0im4dad01anahmhg-a.oregon-postgres.render.com:5432/easybook
+    username: easybook
+    password: 704JtcUKoIGL3UuN4MyNkVwagPnQ8RGL
+    driver-class-name: org.postgresql.Driver
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQLDialect
-
   mail:
     host: localhost
     port: 1025
