--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
     </dependencies>
 
 	<build>
+		<finalName>EasyBook</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
