--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,9 +14,9 @@
 #    database-platform: org.hibernate.dialect.MySQLDialect
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-chim0im4dad01anahmhg-a.oregon-postgres.render.com:5432/easybook
+    url: jdbc:postgresql://dpg-cjfu2lnr2b1s73b9v3v0-a.oregon-postgres.render.com:5432/easybook2
     username: easybook
-    password: 704JtcUKoIGL3UuN4MyNkVwagPnQ8RGL
+    password: x7sk8SgtuWWcBoUMroBpnHovJrz3IMz1
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -28,7 +28,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: amoz4christ@gmail.com
-    password: bbyswiazoqyjbtlc
+    password: kawyhdntddbpbgil
     protocol: smtp
     properties:
       mail:
