--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,9 +14,9 @@
 #    database-platform: org.hibernate.dialect.MySQLDialect
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-chim0im4dad01anahmhg-a.oregon-postgres.render.com:5432/easybook
-    username: easybook
-    password: 704JtcUKoIGL3UuN4MyNkVwagPnQ8RGL
+    url: jdbc:postgresql://dpg-cvm24o3e5dus73aebh9g-a.oregon-postgres.render.com:5432/easybook
+    username: easybook_636l_user
+    password: PnauLLUELsqV6XswHDI9xVEOm9wPgDaX
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
